// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
edition = "2023";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.

option features.field_presence = IMPLICIT;

package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum ComputeAlphaFirewallPolicyRuleDirectionEnum {
  ComputeAlphaFirewallPolicyRuleDirectionEnumNO_VALUE_DO_NOT_USE = 0;
  ComputeAlphaFirewallPolicyRuleDirectionEnumINGRESS = 1;
  ComputeAlphaFirewallPolicyRuleDirectionEnumEGRESS = 2;
}

message ComputeAlphaFirewallPolicyRule {
  string description = 1;
  int64 priority = 2;
  ComputeAlphaFirewallPolicyRuleMatch match = 3;
  string action = 4;
  string security_profile_group = 5;
  bool tls_inspect = 6;
  ComputeAlphaFirewallPolicyRuleDirectionEnum direction = 7;
  repeated string target_resources = 8;
  bool enable_logging = 9;
  int64 rule_tuple_count = 10;
  repeated string target_service_accounts = 11;
  bool disabled = 12;
  string kind = 13;
  string firewall_policy = 14;
}

message ComputeAlphaFirewallPolicyRuleMatch {
  repeated string src_ip_ranges = 1;
  repeated string dest_ip_ranges = 2;
  repeated string src_region_codes = 3;
  repeated string dest_region_codes = 4;
  repeated string src_threat_intelligences = 5;
  repeated string dest_threat_intelligences = 6;
  repeated string src_fqdns = 7;
  repeated string dest_fqdns = 8;
  repeated ComputeAlphaFirewallPolicyRuleMatchLayer4Configs layer4_configs = 9;
  repeated string src_address_groups = 10;
  repeated string dest_address_groups = 11;
}

message ComputeAlphaFirewallPolicyRuleMatchLayer4Configs {
  string ip_protocol = 1;
  repeated string ports = 2;
}

message ApplyComputeAlphaFirewallPolicyRuleRequest {
  ComputeAlphaFirewallPolicyRule resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteComputeAlphaFirewallPolicyRuleRequest {
  string service_account_file = 1;
  ComputeAlphaFirewallPolicyRule resource = 2;
}

message ListComputeAlphaFirewallPolicyRuleRequest {
  string service_account_file = 1;
  string FirewallPolicy = 2;
}

message ListComputeAlphaFirewallPolicyRuleResponse {
  repeated ComputeAlphaFirewallPolicyRule items = 1;
}

service ComputeAlphaFirewallPolicyRuleService {
  rpc ApplyComputeAlphaFirewallPolicyRule(ApplyComputeAlphaFirewallPolicyRuleRequest) returns (ComputeAlphaFirewallPolicyRule);
  rpc DeleteComputeAlphaFirewallPolicyRule(DeleteComputeAlphaFirewallPolicyRuleRequest) returns (google.protobuf.Empty);
  rpc ListComputeAlphaFirewallPolicyRule(ListComputeAlphaFirewallPolicyRuleRequest) returns (ListComputeAlphaFirewallPolicyRuleResponse);
}
